2016-06-26  Titus Brown  <titus@idyll.org>

   * khmer/_khmer.cc, tests/test_nodegraph.py: 'add' is now a synonym for
   graph.count(kmer).
   * khmer/thread_utils.py: update verbose_loader function to take 'verbose'
   argument.
   * scripts/{abundance-dist-single.py, abundance-dist.py,
   filter-abund-single.py, filter-abund.py, load-into-counting.py,
   normalize-by-median.py,trim-low-abund.py}: updated to
   respect -q/--quiet.
   * tests/test_scripts.py: tests for '-q'.
   * scripts/partition-graph.py: fix typo in args help message.

2016-05-25  Titus Brown  <titus@idyll.org>

   * scripts/trim-low-abund.py: switched to watermark-based reporting to
   isolate a hard-to-trigger undefined variable error in reporting.
   * tests/test_scripts.py: added a test for basic reporting functionality.

2016-05-16  Titus Brown  <titus@idyll.org>
2016-05-16  Luiz Irber  <khmer@luizirber.org>

   * Makefile,jenkins-build.sh,setup.cfg,tests/khmer_tst_utils.py,
   tests/test_{countgraph,counting_single,hll,labelhash,nodegraph,
   normalize_by_median,read_aligner,read_handling,read_parsers,sandbox_scripts,
   scripts,version}.py: replace nose with pytest, update configuration.

2016-05-16  Luiz Irber  <khmer@luizirber.org>

   * lib/hashtable.cc: fix bug with substr
   * tests/test_countgraph.py: add test to trigger the substr bug.

2016-05-12  Titus Brown  <titus@idyll.org>

   * khmer/_khmer.cc: define new khmer_HashSet_Type and khmer_HashSet_Object;
   lots of associated cleanup of k-mer <-> C++ interface; added
   Hashtable::neighbors; added Hashtable::hash and Hashtable::reverse_hash;
   CPython 'hashtable.count(...)' function now takes either hash or string.
   * lib/{kmer_hash.cc, kmer_hash.hh}: added some function overloads so that
   _hash(...) could take strings as arguments without conversion; added
   Kmer::set_from_unique_hash convenience function.
   * lib/{hashtable.cc, hashtable.hh}: minor cleanup;
   * lib/{read_aligner.cc, subset.cc}: minor refactoring.