@@ -51,3 +51,4 @@ compile_commands.json
 pylint_report.txt
 pep8_report.txt
 pep257_report.txt
+.cache/
