@@ -43,20 +43,11 @@ from __future__ import absolute_import
 import khmer
 from . import khmer_tst_utils as utils
 
-import hashlib
-
 #
 # hashes recorded as of git commit 799039ffcf15d2a3ac6902ae62ae2da81030e8d2
 # (for trim-low-abund without --diginorm behavior) and
 # b939a34b565ce973224abdd0eeb53d6b52833c01 (for trim-low-abund updates).
 #
-
-
-def _calc_md5(fp):
-    m = hashlib.md5()
-    m.update(fp.read())
-
-    return m.hexdigest()
 
 
 def test_normalize_by_median_k21_C20_M1e7():
@@ -66,7 +57,7 @@ def test_normalize_by_median_k21_C20_M1e7():
                                                '-M', '1e7', '-o', outfile,
                                                infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '5fed8ed10896639ad7fb607f93a4473d', hash
 
 
@@ -77,7 +68,7 @@ def test_normalize_by_median_k21_C15_M1e7():
                                                '-M', '1e7', '-o', outfile,
                                                infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == 'fd38b9e17a736694c20e66a3d8411eaa', hash
 
 
@@ -91,7 +82,7 @@ def test_trim_low_abund_k21_C0_M1e7_diginorm():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '5fed8ed10896639ad7fb607f93a4473d', hash
 
 
@@ -105,7 +96,7 @@ def test_trim_low_abund_k21_C0_M1e7_diginorm_dn15():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == 'fd38b9e17a736694c20e66a3d8411eaa', hash
 
 
@@ -119,7 +110,7 @@ def test_trim_low_abund_k21_C2_M1e7_diginorm_dn15():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == 'e57be1402a9fd84d8481d8ef5a695596', hash
 
 
@@ -130,7 +121,7 @@ def test_trim_low_abund_k21_M1e7_C2():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '21ad2f64ceeb1e153f1e513486df9434', hash
 
 
@@ -141,7 +132,7 @@ def test_trim_low_abund_k21_M1e7_C3():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '3da84a42d8538e24240e78cd0eadf168', hash
 
 
@@ -152,7 +143,7 @@ def test_trim_low_abund_k21_M1e7_C4():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '578f124937b5a639985cc0a808139653', hash
 
 
@@ -164,7 +155,7 @@ def test_trim_low_abund_k21_M1e7_C4_variable():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == '154d2a25599b3dcd2cf9cd2375999e56', hash
 
 
@@ -176,7 +167,7 @@ def test_trim_low_abund_k21_M1e7_C4_variable_Z25():
                                           '-M', '1e7', '-o', outfile,
                                           infile])
 
-    hash = _calc_md5(open(outfile, 'rb'))
+    hash = utils._calc_md5(open(outfile, 'rb'))
     assert hash == 'eb8bc6ed6246fb819100b9e7dde6fad2', hash
 
 
@@ -189,5 +180,5 @@ def test_trim_low_abund_k21_M1e7_C4_variable_Z15():
                                           infile])
 
     with open(outfile, 'rb') as output:
-        hashval = _calc_md5(output)
+        hashval = utils._calc_md5(output)
     assert hashval == 'b948ae4f2114be27279de37b46376f6d', hash
